Clean up xtdb2 and s3 leftovers